[package]
name = "nebulae"
description = "A multi-threaded Nebulabrot renderer."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
png = "0.17.6"
dialoguer = "0.10.2"
indicatif = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
clap = { version = "3.2.22", features = ["derive"] }