[package]
name = "nebulae"
description = "A multi-threaded Nebulabrot renderer."
repository = "https://github.com/Bradshaw/nebulae"
homepage = "https://github.com/Bradshaw/nebulae"
version = "1.0.0"
edition = "2021"

license = "NPOSL-3.0"
keywords = ["image", "cli", "rendering", "fractal", "mandelbrot"]
categories = ["mathematics", "graphics", "multimedia::images", "rendering", "visualization", "command-line-utilities"]
include = ["/src", "README.md", "default.toml"]

[profile.release]
lto = true

[dependencies]
rand = "0.8.5"
png = "0.17.6"
dialoguer = "0.10.2"
indicatif = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
clap = { version = "3.2.22", features = ["derive"] }